# minecraft

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.bak  Makefile  README.md  cmake_install.cmake
doc/html/: _assets_manager_8h_source.html  _block_8h_source.html  _camera_8h_source.html  _chunk_8h_source.html  _chunk_builder_8h_source.html  _chunk_mesh_8h_source.html  _constants_8h_source.html  _crosshair_material_8h_source.html  _crosshair_mesh_8h_source.html  _crosshair_object_8h_source.html  _cube_8h_source.html  _date_time_8h_source.html  _game_8h_source.html  _game_object_8h_source.html  _material_8h_source.html  _mesh_8h_source.html  _pair_hash_8h_source.html  _plane_8h_source.html  _player_8h_source.html  _renderer_8h_source.html  _shader_8h_source.html  _sun_and_moon_8h_source.html  _sun_and_moon_material_8h_source.html  _texture_8h_source.html  _window_8h_source.html  _world_8h_source.html  _world_material_8h_source.html  _world_object_8h_source.html  annotated.html  annotated_dup.js  class_assets_manager-members.html  class_assets_manager.html  class_block-members.html  class_block.html  class_block.js  class_camera-members.html  class_camera.html  class_camera.js  class_chunk-members.html  class_chunk.html  (+99 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_6.js  classes_8.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js  variables_0.js  variables_1.js  (+12 more)
doc/latex/: _assets_manager_8h_source.tex  _block_8h_source.tex  _camera_8h_source.tex  _chunk_8h_source.tex  _chunk_builder_8h_source.tex  _chunk_mesh_8h_source.tex  _constants_8h_source.tex  _crosshair_material_8h_source.tex  _crosshair_mesh_8h_source.tex  _crosshair_object_8h_source.tex  _cube_8h_source.tex  _date_time_8h_source.tex  _game_8h_source.tex  _game_object_8h_source.tex  _material_8h_source.tex  _mesh_8h_source.tex  _pair_hash_8h_source.tex  _plane_8h_source.tex  _player_8h_source.tex  _renderer_8h_source.tex  _shader_8h_source.tex  _sun_and_moon_8h_source.tex  _sun_and_moon_material_8h_source.tex  _texture_8h_source.tex  _window_8h_source.tex  _world_8h_source.tex  _world_material_8h_source.tex  _world_object_8h_source.tex  annotated.tex  class_assets_manager.tex  class_block.tex  class_camera.tex  class_chunk.tex  class_chunk_builder.tex  class_chunk_mesh.tex  class_crosshair_material.eps  class_crosshair_material.tex  class_crosshair_mesh.tex  class_crosshair_object.eps  class_crosshair_object.tex  (+25 more)
src/: glad.c  main.cpp  mesh.cpp
src/engine/Game/: DateTime.cpp  Game.cpp  Game.h  IGameObject.cpp  IGameObject.h
src/engine/Map/: PairHash.h
src/engine/Meshes/: ChunkBuilder.cpp  ChunkMesh.h  CrosshairMesh.cpp  Mesh.cpp  Mesh.h
src/engine/Objects/: Cube.h
src/engine/Player/: Camera.h  Player.cpp  Player.h
src/engine/Renderer/: Material.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp
src/engine/Utils/: AssetsManager.cpp  AssetsManager.h
src/engine/Window/: Window.cpp  Window.h
src/engine/World/: Chunk.cpp  World.cpp
src/game/GameObjects/: CrosshairObject.cpp  CrosshairObject.h  SunAndMoon.cpp  SunAndMoon.h  WorldObject.cpp  WorldObject.h
src/game/Materials/: CrosshairMaterial.h  SunAndMoonMaterial.h  WorldMaterial.h
src/lib/: Constants.h  stb_image.h
src/lib/Block/: Block.h
src/lib/Buffers/: VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/lib/Camera/: Camera.cpp  Camera.h
src/lib/Chunk/: Chunk.cpp  Chunk.h
src/lib/Game/: DateTime.cpp  DateTime.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h
src/lib/GameObjects/: CrosshairObject.h  SunAndMoon.cpp  SunAndMoon.h  WorldObject.cpp  WorldObject.h
src/lib/Map/: PairHash.h
src/lib/Material/: Material.cpp  Material.h
src/lib/Materials/: CrosshairMaterial.h  DepthTestMaterial.h  ShadowMappingMaterial.h  SunAndMoonMaterial.h  WorldMaterial.h
src/lib/Mesh/: Mesh.cpp
src/lib/Meshes/: ChunkBuilder.cpp  ChunkBuilder.h  (+4 more)
(+79 files in other folders)
